chore: full project backup snapshot